--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
           Have a question? Leave your information below and we will get back to
           you as soon as possible.
         </p>
-        <form name="contact" netlify>
+        <form name="contact" method="POST" data-netlify="true">
           <div class="form-group">
             <input
               type="text"
